# icsrmaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  map_metadata.csv  pyproject.toml  requirements.txt  setup.py
examples/: example_usage.py  sample_input.json
src/icsrmaker/: __init__.py  __main__.py  cli.py  data_extractor.py  mapping_parser.py  xml_generator.py
